[gd_scene load_steps=19 format=3]

[ext_resource type="Script" path="res://Script/Level/xtwdtrap.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b05g3hxetf78y" path="res://Art/Level/Game3Level/Level_2_3/hp.png" id="2"]
[ext_resource type="Texture2D" uid="uid://b6qnviu3dt1yp" path="res://Art/Monster/Cow/First/CowFire.png" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(424, 1692)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(121, 279)
script = null

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource( "3" )
region = Rect2(328, 0, 164, 317)
script = null

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource( "3" )
region = Rect2(492, 0, 164, 317)
script = null

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource( "3" )
region = Rect2(656, 0, 164, 317)
script = null

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource( "3" )
region = Rect2(820, 0, 164, 317)
script = null

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource( "3" )
region = Rect2(984, 0, 164, 317)
script = null

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource( "3" )
region = Rect2(1148, 0, 164, 317)
script = null

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource( "3" )
region = Rect2(1312, 0, 164, 317)
script = null

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource( "3" )
region = Rect2(1476, 0, 164, 317)
script = null

[sub_resource type="SpriteFrames" id="11"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"Empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "3" )
}, {
"duration": 1.0,
"texture": SubResource( "4" )
}, {
"duration": 1.0,
"texture": SubResource( "5" )
}, {
"duration": 1.0,
"texture": SubResource( "6" )
}, {
"duration": 1.0,
"texture": SubResource( "7" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}, {
"duration": 1.0,
"texture": SubResource( "9" )
}, {
"duration": 1.0,
"texture": SubResource( "10" )
}],
"loop": false,
"name": &"Hit",
"speed": 15.0
}]
script = null

[sub_resource type="Animation" id="12"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Empty"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HixBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
script = null

[sub_resource type="Animation" id="13"]
length = 0.533333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Hit"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HixBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HixBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3.5, -119.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HixBox/CollisionShape2D:shape")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "2" )]
}
script = null

[sub_resource type="Animation" id="14"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HixBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
script = null

[sub_resource type="AnimationLibrary" id="15"]
_data = {
"Empty": SubResource( "12" ),
"Hit": SubResource( "13" ),
"RESET": SubResource( "14" )
}
script = null

[node name="xtwdtrap" type="Node2D"]
script = ExtResource( "1" )

[node name="Hp" type="Sprite2D" parent="."]
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -825)
shape = SubResource( "1" )
metadata/_edit_lock_ = true

[node name="HixBox" type="Area2D" parent="."]
visible = false
collision_layer = 4352
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="HixBox"]
position = Vector2(-3.5, -119.5)
shape = SubResource( "2" )
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -144)
sprite_frames = SubResource( "11" )
animation = &"Empty"
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource( "15" )
}

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered" flags=18]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited" flags=18]
[connection signal="area_entered" from="HixBox" to="." method="_on_hix_box_area_entered" flags=18]
